crates/xlate/tests/snapshots/golden_matrix__responses__err_unknown_field__gpt-4o-mini__20260910__responses_to_chat__openai_compatible.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "llama-x",
  "messages": [
    {
      "role": "user",
      "content": "Say ok."
    }
  ],
  "max_tokens": 32
}
--- headers ---
upstream_streams: false
--- degraded ---
ext.responses.frobnicate=dropped
